# micro-rdk-temperature-dev-project

./: .gitignore  Cargo.toml  Makefile  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: publish.yml
src/: main.rs
